@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Give access to quest-related functions to the Python plugin.
+Nicolas Weeger 2010-01-24
+
 Tweak Spike's quest (Darcap) so it can be done again and again.
 Nicolas Weeger 2010-01-24
 
